<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/history_date_font_size"
        android:text="@string/history_date_blank"/>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/bmiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_distance"
                android:text="@string/history_bmi_label" />

            <TextView
                android:id="@+id/bmiTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_empty_numeric" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/heightGL"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/massGL"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/massLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_distance"
                android:text="@string/history_mass_label" />

            <TextView
                android:id="@+id/massTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_empty_numeric" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/heightGL"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/heightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_distance"
                android:text="@string/history_height_label" />

            <TextView
                android:id="@+id/heightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_empty_numeric" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/massGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/heightGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>