<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/massTV"
        android:labelFor="@id/massET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_distance"
        android:text="@string/mass_kg"
        app:layout_constraintBottom_toTopOf="@+id/massET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiLogo"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/massET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/heightET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/bmiLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/heightET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massET"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/heightTV"
        android:labelFor="@id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_distance"
        android:text="@string/height_cm"
        app:layout_constraintBottom_toTopOf="@+id/heightET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massET"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/countBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:onClick="count"
        android:text="@string/count_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <pl.pwr.adam.zmuda.lab1.views.MySeekArc
        android:id="@+id/bmiSeekArc"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countBTN"
        app:rotation="-90"
        app:startAngle="30"
        app:sweepAngle="120"
        app:enabled="false"/>

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openDetails"
        android:text="@string/empty_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countBTN" />

    <ImageView
        android:id="@+id/bmiLogo"
        android:layout_width="110dp"
        android:layout_height="119dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/massET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/bmi" />

</androidx.constraintlayout.widget.ConstraintLayout>